--- a/app/src/main/res/layout/fragment_hoofdscherm.xml
+++ b/app/src/main/res/layout/fragment_hoofdscherm.xml
@@ -22,8 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="0.14"
-            android:id="@+id/">
+            android:layout_weight="0.14">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -40,7 +39,7 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Slot 1"
+                android:text="New Button"
                 android:id="@+id/button3"
                 android:layout_gravity="center_horizontal" />
         </LinearLayout>
@@ -54,7 +53,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Slot 2"
+                android:text="New Button"
                 android:id="@+id/button"
                 android:layout_gravity="center_horizontal" />
         </LinearLayout>
@@ -68,7 +67,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Slot 3"
+                android:text="New Button"
                 android:id="@+id/button2"
                 android:layout_gravity="center_horizontal" />
         </LinearLayout>
