--- a/app/src/main/res/layout/fragment_hoofdscherm.xml
+++ b/app/src/main/res/layout/fragment_hoofdscherm.xml
@@ -15,31 +15,34 @@
         android:layout_height="fill_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:id="@+id/">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_weight="0.14">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/imageView" />
+                android:id="@+id/imageView"
+                android:layout_gravity="center_horizontal"
+                android:src="@mipmap/logo_sleutelaar" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.14">
+            android:layout_weight="0.14"
+            android:id="@+id/">
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Button"
+                android:text="Slot1"
                 android:id="@+id/button3"
                 android:layout_gravity="center_horizontal" />
         </LinearLayout>
@@ -48,12 +51,13 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.14">
+            android:layout_weight="0.14"
+            android:id="@+id/">
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Button"
+                android:text="Slot2"
                 android:id="@+id/button"
                 android:layout_gravity="center_horizontal" />
         </LinearLayout>
@@ -67,7 +71,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Button"
+                android:text="Slot3"
                 android:id="@+id/button2"
                 android:layout_gravity="center_horizontal" />
         </LinearLayout>
